--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Silvia Tomanin
 email: silvia.tomanin@gmail.com
 url: https://stomanin.github.io
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
+description: "Silvia Tomanin's website: web engineer and product manager."
 skills: "Web engineer and product manager. Loving food and pleasant UX."
 meta_author: Tomanin Silvia
 
