Copyright and footer update

--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ color:
 footer:
   copyright: Silvia Tomanin
   location: Location
-  social: Around the Web
+  social: Find me elsewhere
   credits: About 
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
